--- a/index_sunburst.html
+++ b/index_sunburst.html
@@ -6,22 +6,27 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css">
 		<link rel="stylesheet" href="css/milligram.min.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
+        <link rel="stylesheet" type="text/css" href="css/sequences.css"/>
+        <link rel="stylesheet" href="css/overwrite.css">
         <script src="js/jquery.min.js"></script>
         <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+        <script src="//d3js.org/d3.v4.min.js"></script>
         <script src="js/scripts.js"></script>
         <script src="js/table.js"></script>
-        <script src="//d3js.org/d3.v4.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600">
-        <link rel="stylesheet" type="text/css" href="sequences.css"/>
-        <link rel="stylesheet" href="css/overwrite.css">
+
     </head>
 
     <body>
         <div>
             <img src="images/alstom.png" style="height:15px">
             <h1>Life cycle cost | v0.1.3</h1>
-            <div id="buttons">
+            <div id="controls">
                 <button type="button" ID="Update_button">Update Chart from table</button>
+                <form>
+                    <label><input type="radio" name="mode" value="size"> Previous</label>
+                    <label><input type="radio" name="mode" value="count" checked> Current</label>
+                </form>
             </div>
             <div id="main">
                 <div id="sequence"></div>
@@ -33,6 +38,6 @@
             </div>
             <div id="table"></div>
         </div>
-        <script type="text/javascript" src="sequences.js"></script>
+        <script type="text/javascript" src="js/sequences.js"></script>
     </body>
 </html>
