--- a/index_sunburst.html
+++ b/index_sunburst.html
@@ -21,14 +21,17 @@
         <div>
             <img src="images/alstom.png" style="height:15px">
             <h1>Life cycle cost | v0.1.3</h1>
+            <h4>Total Qty: <span id="total_value"></span></h4>
+
             <div id="controls">
                 <button type="button" ID="Update_button">Update Chart from table</button>
-                <form>
-                    <label><input type="radio" name="mode" value="size"> Previous</label>
-                    <label><input type="radio" name="mode" value="count" checked> Current</label>
+                <form id="form">
+                    <label><input type="radio" name="mode" value="size">Previous </label>
+                    <label><input type="radio" name="mode" value="count" checked>Current </label>
                 </form>
             </div>
             <div id="main">
+                <h3>Tree navigation + relative cost visualization</h3>
                 <div id="sequence"></div>
                 <div id="chart">
                     <div id="explanation" style="visibility: hidden;">
@@ -36,8 +39,59 @@
                     </div>
                 </div>
             </div>
-            <div id="table"></div>
+            <div id="results">
+                <h3>Results</h3>
+                <table style="display: inline;">
+                    <thead>
+                        <tr>
+                            <th>Company</th>
+                            <th>Contact</th>
+                            <th>bla bla bla</th>
+                            <th>bla bla bla</th>
+                            <th>bla bla bla</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Alfreds Futterkiste</td>
+                            <td>Maria Anders</td>
+                            <td>Germany</td>
+                        </tr>
+                        <tr>
+                            <td>Centro comercial Moctezuma</td>
+                            <td>Francisco Chang</td>
+                            <td>Mexico</td>
+                        </tr>
+                        <tr>
+                            <td>Ernst Handel</td>
+                            <td>Roland Mendel</td>
+                            <td>Austria</td>
+                        </tr>
+                        <tr>
+                            <td>Island Trading</td>
+                            <td>Helen Bennett</td>
+                            <td>UK</td>
+                        </tr>
+                        <tr>
+                            <td>Laughing Bacchus Winecellars</td>
+                            <td>Yoshi Tannamuri</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Magazzini Alimentari Riuniti</td>
+                            <td>Giovanni Rovelli</td>
+                            <td>Italy</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+
+            <div id="editor" style="display: inline-block">
+                <h3>Cost parameters</h3>
+                <div id="table"></div>
+            </div>
         </div>
+        
         <script type="text/javascript" src="js/sequences.js"></script>
     </body>
 </html>
