form selection active

--- a/index_sunburst.html
+++ b/index_sunburst.html
@@ -25,9 +25,9 @@
 
             <div id="controls">
                 <button type="button" ID="Update_button">Update Chart from table</button>
-                <form id="form">
-                    <label><input type="radio" name="mode" value="size">Previous </label>
-                    <label><input type="radio" name="mode" value="count" checked>Current </label>
+                <form id="forms">
+                    <label><input type="radio" name="mode" value="previous">Previous </label>
+                    <label><input type="radio" name="mode" value="current" checked>Current </label>
                 </form>
             </div>
             <div id="main">
