--- a/index_sunburst.html
+++ b/index_sunburst.html
@@ -39,49 +39,151 @@
             </div>
             <div id="results">
                 <h3>Results</h3>
-                <table style="display: inline;">
-                    <thead>
-                        <tr>
-                            <th>Company</th>
-                            <th>Contact</th>
-                            <th>bla bla bla</th>
-                            <th>bla bla bla</th>
-                            <th>bla bla bla</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Alfreds Futterkiste</td>
-                            <td>Maria Anders</td>
-                            <td>Germany</td>
-                        </tr>
-                        <tr>
-                            <td>Centro comercial Moctezuma</td>
-                            <td>Francisco Chang</td>
-                            <td>Mexico</td>
-                        </tr>
-                        <tr>
-                            <td>Ernst Handel</td>
-                            <td>Roland Mendel</td>
-                            <td>Austria</td>
-                        </tr>
-                        <tr>
-                            <td>Island Trading</td>
-                            <td>Helen Bennett</td>
-                            <td>UK</td>
-                        </tr>
-                        <tr>
-                            <td>Laughing Bacchus Winecellars</td>
-                            <td>Yoshi Tannamuri</td>
-                            <td>Canada</td>
-                        </tr>
-                        <tr>
-                            <td>Magazzini Alimentari Riuniti</td>
-                            <td>Giovanni Rovelli</td>
-                            <td>Italy</td>
-                        </tr>
-                    </tbody>
-                </table>
+                <h5 class="table_title">first one</h5>
+                <div>
+                    <table style="display: inline">
+                        <thead>
+                            <tr>
+                                <th>Year</th>
+                                <th>Total Discard Cost (k€)</th>
+                                <th>Total MMH<sub>ACM</sub> Cost (k€)</th>
+                                <th>Total Repair Cost (k€)</th>
+                                <th>Total Renewal Cost (k€)</th>
+                                <th>Total MMH<sub>APM</sub> Cost(k€)</th>
+                                <th>Total Maintenance Cost (k€)</th>
+                                <th>Life Cycle Cost (k€)</th>
+                                <th>LCC/Maintenance Cost Ratio</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>1</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>5</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>10</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>20</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>25</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <h5 class="table_title">second one</h5>
+                <div>
+                    <table style="display: inline">
+                        <thead>
+                            <tr>
+                                <th>Area</th>
+                                <th>Total Discard Cost (k€/y)</th>
+                                <th>Total MMH<sub>ACM</sub> Cost (k€/y)</th>
+                                <th>Total Repair Cost (k€/y)</th>
+                                <th>Total Renewal Cost (k€/y)</th>
+                                <th>Total MMH<sub>APM</sub> Cost(k€/y)</th>
+                                <th>Total Maintenance Cost (k€/y)</th>
+                                <th>Cont. to the total maint. cost</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Trackside Equipment</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>ATC (Trackside)</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>TCC TMS</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>Train Position, Detection & Integrity</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                            <tr>
+                                <td>IXL</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                                <td>[formula]</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
             </div>
 
             <div id="editor" style="display: inline-block">
