--- a/index_sunburst.html
+++ b/index_sunburst.html
@@ -40,6 +40,12 @@
             <div id="results">
                 <h3>Results</h3>
                 <h5 class="table_title">first one</h5>
+
+                <div id="controls">
+                    <button type="button" ID="tableView">Table view</button>
+                    <button type="button" ID="chartView">Chart view</button>
+                </div>
+
                 <div>
                     <table style="display: inline">
                         <thead>
@@ -49,7 +55,7 @@
                                 <th>Total MMH<sub>ACM</sub> Cost (k€)</th>
                                 <th>Total Repair Cost (k€)</th>
                                 <th>Total Renewal Cost (k€)</th>
-                                <th>Total MMH<sub>APM</sub> Cost(k€)</th>
+                                <th>Total MMH<sub>APM</sub> Cost (k€)</th>
                                 <th>Total Maintenance Cost (k€)</th>
                                 <th>Life Cycle Cost (k€)</th>
                                 <th>LCC/Maintenance Cost Ratio</th>
@@ -116,6 +122,12 @@
                 </div>
 
                 <h5 class="table_title">second one</h5>
+
+                <div id="controls">
+                    <button type="button" ID="tableView">Table view</button>
+                    <button type="button" ID="chartView">Chart view</button>
+                </div>
+
                 <div>
                     <table style="display: inline">
                         <thead>
@@ -125,7 +137,7 @@
                                 <th>Total MMH<sub>ACM</sub> Cost (k€/y)</th>
                                 <th>Total Repair Cost (k€/y)</th>
                                 <th>Total Renewal Cost (k€/y)</th>
-                                <th>Total MMH<sub>APM</sub> Cost(k€/y)</th>
+                                <th>Total MMH<sub>APM</sub> Cost (k€/y)</th>
                                 <th>Total Maintenance Cost (k€/y)</th>
                                 <th>Cont. to the total maint. cost</th>
                             </tr>
