--- a/index_sunburst.html
+++ b/index_sunburst.html
@@ -20,6 +20,10 @@
 
     <body>
         <div>
+            <div id="content">
+                <img src="images/pdf-flat.png" title="Download report PDF" class="ribbon" />
+            </div>
+
             <img src="images/alstom.png" style="height:15px">
             <h1>Life cycle cost | v0.1.3</h1>
             <h4>Total Qty: <span id="total_value"></span></h4>
